データベース送信まで完成。ページ遷移で苦戦中

--- a/app/views/homes/home.html.erb
+++ b/app/views/homes/home.html.erb
@@ -1,12 +1,12 @@
 <div id="app">
   <div class="to_form">
-    <%=link_to "登録ページ", new_register_path %>
+    <%=link_to "登録ページ", api_new_path %>
   </div>
-    <navbar></navbar>
-    <div class="container">
+  <navbar></navbar>
+  <div class="container">
      <router-view></router-view>
-    </div>
   </div>
+</div>
 
   
 
