フォーム送信成功&&ページ遷移成功

--- a/app/views/api/registers/show.html.erb
+++ b/app/views/api/registers/show.html.erb
@@ -1,7 +1,1 @@
-<% provide(:title, "Show") %>
-<h1>いけた？</h1>
-<div id="app">
-  <show></show>
-
-</div>
-<%= javascript_pack_tag 'show' %>
+<h1>はーい</h1>
