登録ページまで完了

--- a/app/views/api/registers/show.html.erb
+++ b/app/views/api/registers/show.html.erb
@@ -1,1 +1,14 @@
 <h1>はーい</h1>
+
+
+
+
+
+
+<h1><%=@user.name %>さん。<br>登録成功です。</h1>
+<div id="app">
+
+  <show></show>
+</div>
+
+<%= javascript_pack_tag 'show' %>
