--- a/app/views/api/means/display.html.erb
+++ b/app/views/api/means/display.html.erb
@@ -1,6 +1,6 @@
 <div id="app">
   <!--ここで、@meansをviewに渡すことができたら、vue.jsでかく。 -->
-  <meanbar :means= "<%= @means.to_json %>" ></meanbar>
+  <meanbar :means= "<%= @means.to_json %>" con_name="<%= @content.content_name%>" ></meanbar>
   
 </div>
 <!--したの処理をフロント側でしたい。 -->
