--- a/app/views/api/means/display.html.erb
+++ b/app/views/api/means/display.html.erb
@@ -1,4 +1,5 @@
 <div id="app">
+  <%= flash[:done] %>
   <!--ここで、@meansをviewに渡すことができたら、vue.jsでかく。 -->
   <meanbar :means= "<%= @means.to_json %>" con_name="<%= @content.content_name%>" current_user_id = "<%= @current_user %>" authenticity_token="<%= form_authenticity_token() %>"></meanbar>
   
