--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,12 +1,32 @@
 <header>
   <div id="appHeader">
-    <div class="container">
-      <p class="notice"><%= notice %></p>
-      <p class="alert"><%= alert %></p>
-      <%= link_to "登録ページ", new_user_registration_path %>
-      <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
+    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+        
+      <ul class="navbar-nav">
+      <% if user_signed_in? %>
+
+        <li class="nav-item">
+        <%= link_to "ログアウト", destroy_user_session_path, method: :delete, class: "nav-link", style: "height: 5px; color: white;" %>
+        </li><span><p class="alert"><%= alert %></span>
+
+      <% else %>
+
+        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+          ログインはこちら
+        </a>
+        <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+          <%= link_to "ログインページ", new_user_session_path, class: "dropdown-item"%>
+          <%= link_to "登録ページ", new_user_registration_path ,class: "dropdown-item"%>
+          <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Something else here</a>
+          </div>
+          <p class="notice"><%= notice %></p>
+        </div>
+
+      <% end %>
+      </ul>
       <navbar></navbar>
-    </div>
+    </nav>
   </div>
 </header>
 
