--- a/app/views/api/means/display.html.erb
+++ b/app/views/api/means/display.html.erb
@@ -1,7 +1,7 @@
 <div id="app">
   <%= flash[:done] %>
   <!--ここで、@meansをviewに渡すことができたら、vue.jsでかく。 -->
-  <meanbar :means= "<%= @means.to_json %>" con_name="<%= @content.content_name%>" current_user_id = "<%= @current_user %>" authenticity_token="<%= form_authenticity_token() %>"></meanbar>
+  <meanbar :means= "<%= @means.to_json %>" con_name="<%= @content.content_name%>" current_user_id = "<%= @current_user %>" authenticity_token="<%= @session_id %>"></meanbar>
   
 </div>
 <!--したの処理をフロント側でしたい。 -->
