--- a/app/views/api/means/new_post.html.erb
+++ b/app/views/api/means/new_post.html.erb
@@ -1,5 +1,5 @@
 <div id="app">
-  <newbar content_id="<%= @content_id %>" authenticity_token="<%= form_authenticity_token() %>" ></newbar>
+  <newbar content_name="<%= @content_name %>"content_id="<%= @content_id %>"  authenticity_token="<%= form_authenticity_token() %>" ></newbar>
 </div>
 
 
