--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,4 +1,4 @@
-<div class="container">
+<div class="container" >
   <div class="Head">
     <h1>In-short</h1>
   </div>
@@ -6,7 +6,7 @@
 
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
       <div class="form-top">
-        <p>入力してください</p>
+        <p>入力してください</p><span>（登録ページ）</span>
         <%= render "devise/shared/error_messages", resource: resource, class: "error" %>
       </div>
       <div class="form-middle">
@@ -33,7 +33,7 @@
 
         <div class="form-group">
           <%= f.label :password_confirmation %><br />
-          <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "際入力してください", class: "form-control" %>
+          <%= f.password_field :password_confirmation, autocomplete: "new-password", placeholder: "再入力してください", class: "form-control" %>
         </div>
       </div>
 
@@ -43,5 +43,4 @@
     <% end %>
   </div>
 </div>
-<%= render "devise/shared/links" %>
 
