--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,8 +11,10 @@
   </head>
 
   <body>
-      <%= render 'layouts/header' %>
+    <%= render 'layouts/header' %>
+    <main>
       <%= yield %> 
-
+    </main>
+      <%= render 'layouts/footer' %>
   </body>
 </html>
