[fix] 投稿者の投稿の色チェンジ（伝われ〜））

--- a/app/views/api/means/display.html.erb
+++ b/app/views/api/means/display.html.erb
@@ -1,11 +1,10 @@
 <div id="app">
+  <% provide(:title, "display") %>
   <%= flash[:done] %>
   <!--ここで、@meansをviewに渡すことができたら、vue.jsでかく。 -->
-  <meanbar :means= "<%= @means.to_json %>" con_name="<%= @content.content_name%>" current_user_id = "<%= @current_user %>" authenticity_token="<%= @session_id %>"></meanbar>
-  
-</div>
-<!--したの処理をフロント側でしたい。 -->
+  <meanbar :means= "<%= @means.to_json %>" con_name="<%= @content.content_name%>" current_user_id = "<%= @current_user_id %>" authenticity_token="<%= @session_id %>"></meanbar>
 
-<%= link_to "ホーム", root_path %>
+</div>
+
 
 <%= javascript_pack_tag 'mean' %>
