--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,15 +15,36 @@
 @import 'bootstrap/scss/bootstrap';
 
 
-.container {
-  margin: 10px;
+
+header {
+     background-image: image-url('header.jpg');
+     margin-bottom: 20px;
 }
+
+main {
+  margin-bottom: 10px;
+  padding-bottom: 10px;
+}
+
 
 footer {
-  margin: 20px;
-  background-color: gray;
-
+   margin: 20px;
+   background-image: image-url('footer3.jpg');
+   background-size: cover;
+   position: absolute;
+   bottom: 0;
+   width: 100%;
+   //height: 90px;
+   margin-left: 0;
+   margin-bottom: 0;
 }
+footer h6 {
+   margin-top: 40px;
+   padding-left: 10px;
+   display: flex;
+   align-items: center;
+}
+
  
 .Head h1 {
   font-size: 50px;
@@ -54,7 +75,4 @@ footer {
   color: red;
 }
 
-.login_forget {
-  
-}
 
