--- a/app/views/api/means/new_post.html.erb
+++ b/app/views/api/means/new_post.html.erb
@@ -1,6 +1,4 @@
 <div id="app">
-  <newbar content_name="<%= @content_name %>"content_id="<%= @content_id %>"  authenticity_token="<%= form_authenticity_token() %>" ></newbar>
+  <newbar content_name="<%= @content_name %>"content_id="<%= @content_id %>"  authenticity_token="<%= form_authenticity_token() %>"  use_id="<%= @current_user_id %>"></newbar>
 </div>
-
-
-<%= javascript_pack_tag 'new_post' %>
+<%= javascript_pack_tag 'new_post' %> 
