--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -1,6 +1,6 @@
-<header>
+<header class="sticky-top">
   <div id="appHeader">
-    <nav class="navbar navbar-expand-lg navbar-light bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-light">
         
       <ul class="navbar-nav">
       <% if user_signed_in? %>
@@ -17,17 +17,12 @@
         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
           <%= link_to "ログインページ", new_user_session_path, class: "dropdown-item"%>
           <%= link_to "登録ページ", new_user_registration_path ,class: "dropdown-item"%>
-          <div class="dropdown-divider"></div>
-            <a class="dropdown-item" href="#">Something else here</a>
-          </div>
           <p class="notice"><%= notice %></p>
         </div>
 
       <% end %>
       </ul>
-      <navbar></navbar>
     </nav>
   </div>
 </header>
 
-<%= javascript_pack_tag 'home' %>
