[change] change language deviseの言語を日本語に変えた。

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,6 +13,11 @@
   <body>
     <%= render 'layouts/header' %>
     <main>
+      <div class="container">
+        <%- flash.each do |name, msg| -%>
+          <%= content_tag :div, msg, :id => "flash_#{name}" if msg.is_a?(String) %>
+        <%- end -%> 
+      </div>
       <%= yield %> 
     </main>
       <%= render 'layouts/footer' %>
