--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -38,7 +38,7 @@
       </div>
 
       <div class="form-bottom">
-        <%= f.submit "登録", class: "btn btn-primary" %>
+        <%= f.submit "登録", class: "btn btn-primary btn-bottom" %>
       </div>
     <% end %>
   </div>
