--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -15,7 +15,7 @@
     <main>
       <div class="container">
         <%- flash.each do |name, msg| -%>
-          <%= content_tag :div, msg, :id => "flash_#{name}" if msg.is_a?(String) %>
+          <%= content_tag :div, msg,  class: "error", :id => "flash_#{name}" if msg.is_a?(String) %>
         <%- end -%> 
       </div>
       <%= yield %> 
